# astro-airflow

./: .gitignore  main.py  pyproject.toml  requirements.txt
dags/: my_dag.py  user_processing.py
