[project]
name = "astro-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.2",
    "apache-airflow-providers-amazon>=9.13.0",
    "apache-airflow-providers-apache-spark==5.3.2",
    "apache-airflow-providers-mongo>=5.2.2",
    "pytest>=8.4.2",
]
